force-app/main/default/objects/Financial_Incentive__c/fields/Event_Street__c.field-meta.xml
<CustomField>
    <fullName>Event_Street__c</fullName>
    <description>Please provide the Street Address of your event:</description>
    <inlineHelpText>Please provide the Street Address of your event:</inlineHelpText>
    <label>Event Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>