force-app/main/default/objects/Financial_Incentive__c/fields/Event_Zip_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Event_Zip_Postal_Code__c</fullName>
    <description>Please provide zip/postal code of your event:</description>
    <inlineHelpText>Please provide zip/postal code of your event:</inlineHelpText>
    <label>Event Zip/Postal Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>