force-app/main/default/objects/Financial_Incentive__c/fields/Existing_Event__c.field-meta.xml
<CustomField>
    <fullName>Existing_Event__c</fullName>
    <description>Has this event been delivered in the past?</description>
    <inlineHelpText>Has this event been delivered in the past?</inlineHelpText>
    <label>Existing Event</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>