force-app/main/default/objects/Financial_Incentive__c/fields/Expected_Audience__c.field-meta.xml
<CustomField>
    <fullName>Expected_Audience__c</fullName>
    <label>Expected Attendance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>