force-app/main/default/objects/Financial_Incentive__c/fields/Fax__c.field-meta.xml
<CustomField>
    <fullName>Fax__c</fullName>
    <description>Fax of Registered Property Owner or their authorized agent that has the legal authority to bind the Owner</description>
    <inlineHelpText>Fax of Registered Property Owner or their authorized agent that has the legal authority to bind the Owner</inlineHelpText>
    <label>Fax</label>
    <length>30</length>
    <type>Text</type>
</CustomField>