force-app/main/default/objects/Financial_Incentive__c/fields/File__c.field-meta.xml
<CustomField>
    <fullName>File__c</fullName>
    <description>Unique Identifier that is manually entered into the system</description>
    <inlineHelpText>Unique Identifier that is manually entered into the system</inlineHelpText>
    <label>File #</label>
    <length>100</length>
    <type>Text</type>
</CustomField>