force-app/main/default/objects/Financial_Incentive__c/fields/Final_Invoice_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>Final_Invoice_Received_Date__c</fullName>
    <label>Final Invoice Received Date</label>
    <type>Date</type>
</CustomField>