force-app/main/default/objects/Financial_Incentive__c/fields/Financial_Incentive_Agreement_Schedule_F__c.field-meta.xml
<CustomField>
    <fullName>Financial_Incentive_Agreement_Schedule_F__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Agreement between the City and Owner, to be registered on title, that sets out the terms and conditions of the Brownfields Remediation Tax Assistance and/or the Development Grant Program, as applicable. This is also verified in the Statutory Delcaration and through the in-person site visit.</description>
    <inlineHelpText>Agreement between the City and Owner, to be registered on title, that sets out the terms and conditions of the Brown fields Remediation Tax Assistance and/or the Development Grant Program, as applicable.</inlineHelpText>
    <label>Financial Incentive Agreement Schedule F</label>
    <type>Checkbox</type>
</CustomField>