force-app/main/default/objects/Financial_Incentive__c/fields/Financial_Incentive_Integration_Source__c.field-meta.xml
<CustomField>
    <fullName>Financial_Incentive_Integration_Source__c</fullName>
    <defaultValue>&quot;Salesforce&quot;</defaultValue>
    <description>This field will be used to capture the integration source whenever Financial Incentive record is created/updated from Form Assembly.</description>
    <inlineHelpText>This field will be used to capture the integration source whenever Financial Incentive record is created/updated from Form Assembly.</inlineHelpText>
    <label>Financial Incentive Integration Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>