force-app/main/default/objects/Financial_Incentive__c/fields/Financial_Incentive_Name__c.field-meta.xml
<CustomField>
    <fullName>Financial_Incentive_Name__c</fullName>
    <description>This is a read only field used to store unique Record Name with Auto-number based on Record Type</description>
    <inlineHelpText>This is a read only field used to store unique Record Name with Auto-number based on Record Type</inlineHelpText>
    <label>Unique Identifier Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>