force-app/main/default/objects/Financial_Incentive__c/fields/Financial_Management__c.field-meta.xml
<CustomField>
    <fullName>Financial_Management__c</fullName>
    <label>Financial Management</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>