force-app/main/default/objects/Financial_Incentive__c/fields/Finish_Time_Of_Event__c.field-meta.xml
<CustomField>
    <fullName>Finish_Time_Of_Event__c</fullName>
    <label>Finish Time Of Event</label>
    <length>50</length>
    <type>Text</type>
</CustomField>