force-app/main/default/objects/Financial_Incentive__c/fields/First_Lowest_Bid_Amount__c.field-meta.xml
<CustomField>
    <fullName>First_Lowest_Bid_Amount__c</fullName>
    <label>First Lowest Bid Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>