force-app/main/default/objects/Financial_Incentive__c/fields/Frontage__c.field-meta.xml
<CustomField>
    <fullName>Frontage__c</fullName>
    <description>Frontage of subject property</description>
    <inlineHelpText>Frontage of subject property</inlineHelpText>
    <label>Frontage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>