force-app/main/default/objects/Financial_Incentive__c/fields/FU_Addditional_thoughts_on_the_Program__c.field-meta.xml
<CustomField>
    <fullName>FU_Addditional_thoughts_on_the_Program__c</fullName>
    <label>FU - Addditional thoughts on the Program</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>