force-app/main/default/objects/Financial_Incentive__c/fields/FU_Comments__c.field-meta.xml
<CustomField>
    <fullName>FU_Comments__c</fullName>
    <label>FU - Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>