force-app/main/default/objects/Financial_Incentive__c/fields/FU_If_yes_how_many__c.field-meta.xml
<CustomField>
    <fullName>FU_If_yes_how_many__c</fullName>
    <label>FU - If so, how many</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>