force-app/main/default/objects/Financial_Incentive__c/fields/FU_Mentorship__c.field-meta.xml
<CustomField>
    <fullName>FU_Mentorship__c</fullName>
    <inlineHelpText>1 (most important) to 5 (least important)</inlineHelpText>
    <label>FU - Mentorship</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>