force-app/main/default/objects/Financial_Incentive__c/fields/FU_Purchased_a_Business__c.field-meta.xml
<CustomField>
    <fullName>FU_Purchased_a_Business__c</fullName>
    <label>FU - Purchased a Business</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>