force-app/main/default/objects/Financial_Incentive__c/fields/Funding_Amount_Requested__c.field-meta.xml
<CustomField>
    <fullName>Funding_Amount_Requested__c</fullName>
    <label>Funding Amount Requested</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>