force-app/main/default/objects/Financial_Incentive__c/fields/Funding_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Funding_Criteria__c</fullName>
    <description>The strategic goals that this partnership aims to address. Funding requests for $3,000 and under must meet three criteria; $3,001-$5,000 must meet five; $5,001 and over must meet seven.</description>
    <inlineHelpText>The strategic goals that this partnership aims to address. Funding requests for $3,000 and under must meet three criteria; $3,001-$5,000 must meet five; $5,001 and over must meet seven.</inlineHelpText>
    <label>Funding Criteria</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Helps to overcome barriers to business growth.</fullName>
            </value>
            <value>
                <fullName>Increases profitability or productivity, or stimulates domestic or foreign investment.</fullName>
            </value>
            <value>
                <fullName>Improves diversity, equity and inclusion, in the sector or in service delivery.</fullName>
            </value>
            <value>
                <fullName>Improves availability of, access to or geographic diversity in physical space.</fullName>
            </value>
            <value>
                <fullName>Increases domestic sales or supports engagement with domestic organizations.</fullName>
            </value>
            <value>
                <fullName>Increases exports, improves international reputation or supports the development of</fullName>
            </value>
            <value>
                <fullName>international collaborations.</fullName>
            </value>
            <value>
                <fullName>Promotes the sector, within the Toronto Region or externally.</fullName>
            </value>
            <value>
                <fullName>Strengthens internal networks and collaboration within the sector.</fullName>
            </value>
            <value>
                <fullName>Supports innovation within or technology transfer to the sector.</fullName>
            </value>
            <value>
                <fullName>Supports workforce development</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>