force-app/main/default/objects/Financial_Incentive__c/fields/Grant_Reviewer_Comments__c.field-meta.xml
<CustomField>
    <fullName>Grant_Reviewer_Comments__c</fullName>
    <description>Any additional details while reviewing Grant Request</description>
    <inlineHelpText>Any additional details while reviewing Grant Request</inlineHelpText>
    <label>Grant Reviewer Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>