force-app/main/default/objects/Financial_Incentive__c/fields/Gross_Floor_Area_GFA_For_Use_1__c.field-meta.xml
<CustomField>
    <fullName>Gross_Floor_Area_GFA_For_Use_1__c</fullName>
    <description>Square footage devoted for use 1</description>
    <inlineHelpText>Square footage devoted for use 1</inlineHelpText>
    <label>Gross Floor Area (GFA)  For Use 1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>