force-app/main/default/objects/Financial_Incentive__c/fields/Has_2nd_Payment_been_made__c.field-meta.xml
<CustomField>
    <fullName>Has_2nd_Payment_been_made__c</fullName>
    <label>Has 2nd Payment been made?</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Has_1st_Payment_been_made__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>