force-app/main/default/objects/Financial_Incentive__c/fields/Has_Application_been_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Has_Application_been_Submitted__c</fullName>
    <label>Has Application been Submitted</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Application_submitted_by__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>