force-app/main/default/objects/Financial_Incentive__c/fields/Has_CFI_Criteria_been_met__c.field-meta.xml
<CustomField>
    <fullName>Has_CFI_Criteria_been_met__c</fullName>
    <description>Once Application met all required criteria set it to Yes before Submit for Approval</description>
    <inlineHelpText>Once Application met all required criteria set it to Yes before Submit for Approval</inlineHelpText>
    <label>Has CFI Criteria been met?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>