force-app/main/default/objects/Financial_Incentive__c/fields/Has_Documents_uploaded_in_Salesforce__c.field-meta.xml
<CustomField>
    <fullName>Has_Documents_uploaded_in_Salesforce__c</fullName>
    <description>Please select Yes if documents necessary for Grant approval has been attached to record in salesforce</description>
    <inlineHelpText>Please select Yes if documents necessary for Grant approval has been attached to record in salesforce</inlineHelpText>
    <label>Has Documents uploaded in Salesforce?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>