force-app/main/default/objects/Financial_Incentive__c/fields/Has_eligibility_criteria_been_met__c.field-meta.xml
<CustomField>
    <fullName>Has_eligibility_criteria_been_met__c</fullName>
    <description>Application Reviewer will be required to enter this information.</description>
    <inlineHelpText>Application Reviewer will be required to enter this information.</inlineHelpText>
    <label>Has eligibility criteria been met?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>