force-app/main/default/objects/Financial_Incentive__c/fields/Has_Grant_Amount_been_Paid__c.field-meta.xml
<CustomField>
    <fullName>Has_Grant_Amount_been_Paid__c</fullName>
    <description>Indicator if the payment has been made.</description>
    <inlineHelpText>Indicator if the payment has been made.</inlineHelpText>
    <label>Has Grant Amount been Paid?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>