force-app/main/default/objects/Financial_Incentive__c/fields/Has_No_Conflict_Doc_Uploaded_EDC_GM__c.field-meta.xml
<CustomField>
    <fullName>Has_No_Conflict_Doc_Uploaded_EDC_GM__c</fullName>
    <description>If there are No Conflict than EDC GM should upload the document before Approving IMIT Application.</description>
    <inlineHelpText>If there are No Conflict than EDC GM should upload the document before Approving IMIT Application.</inlineHelpText>
    <label>Has No Conflict Doc Uploaded(EDC GM)</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>No_Conflict_of_Interest_EDC_GM__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>