force-app/main/default/objects/Financial_Incentive__c/fields/Has_No_Conflict_Doc_Uploaded_IMIT_Admin__c.field-meta.xml
<CustomField>
    <fullName>Has_No_Conflict_Doc_Uploaded_IMIT_Admin__c</fullName>
    <description>If there are No Conflict than IMIT Admin should upload the document before Submitting for Approval.</description>
    <inlineHelpText>If there are No Conflict than IMIT Admin should upload the document before Submitting for Approval.</inlineHelpText>
    <label>Has No Conflict Doc Uploaded(IMIT Admin)</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>No_Conflict_of_Interest_IMIT_Admin__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>