force-app/main/default/objects/Financial_Incentive__c/fields/Has_payment_been_made__c.field-meta.xml
<CustomField>
    <fullName>Has_payment_been_made__c</fullName>
    <description>Once payment has been made Advisor should select Yes</description>
    <inlineHelpText>Once payment has been made Advisor should select Yes</inlineHelpText>
    <label>Has payment been made?</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Has_work_been_completed__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>