force-app/main/default/objects/Financial_Incentive__c/fields/Has_Phase_II_Assessment_Conducted__c.field-meta.xml
<CustomField>
    <fullName>Has_Phase_II_Assessment_Conducted__c</fullName>
    <description>Has Phase II Environmental Site Assessment conducted?</description>
    <inlineHelpText>Has Phase II Environmental Site Assessment conducted?</inlineHelpText>
    <label>Has Phase II Assessment Conducted?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>