force-app/main/default/objects/Financial_Incentive__c/fields/Has_work_been_completed__c.field-meta.xml
<CustomField>
    <fullName>Has_work_been_completed__c</fullName>
    <description>This field should be checked before making payment</description>
    <inlineHelpText>This field should be checked before making payment</inlineHelpText>
    <label>Has work been completed?</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Has_signed_document_been_received__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>