force-app/main/default/objects/Financial_Incentive__c/fields/Higher_Ordered_Transit_Comments__c.field-meta.xml
<CustomField>
    <fullName>Higher_Ordered_Transit_Comments__c</fullName>
    <description>Higher Ordered Transit Verification Comments</description>
    <inlineHelpText>Higher Ordered Transit Verification Comments</inlineHelpText>
    <label>Higher Ordered Transit Comments</label>
    <type>TextArea</type>
</CustomField>