force-app/main/default/objects/Financial_Incentive__c/fields/Higher_Ordered_Transit_Verification__c.field-meta.xml
<CustomField>
    <fullName>Higher_Ordered_Transit_Verification__c</fullName>
    <description>Is the Office Building within 800 meters of Higher Ordered Transit?</description>
    <inlineHelpText>Is the Office Building within 800 meters of Higher Ordered Transit?</inlineHelpText>
    <label>Higher Ordered Transit Verification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>