force-app/main/default/objects/Financial_Incentive__c/fields/How_many_number_of_hours_per_week__c.field-meta.xml
<CustomField>
    <fullName>How_many_number_of_hours_per_week__c</fullName>
    <label>How many number of hours per week?</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>