force-app/main/default/objects/Financial_Incentive__c/fields/If_Yes_Who__c.field-meta.xml
<CustomField>
    <fullName>If_Yes_Who__c</fullName>
    <description>Named Contact</description>
    <inlineHelpText>Named Contact</inlineHelpText>
    <label>If Yes Who?</label>
    <length>225</length>
    <type>Text</type>
</CustomField>