force-app/main/default/objects/Financial_Incentive__c/fields/Indigenous_to_Canada__c.field-meta.xml
<CustomField>
    <fullName>Indigenous_to_Canada__c</fullName>
    <label>Do you identify as Indigenous to Canada?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes - First Nations</fullName>
            </value>
            <value>
                <fullName>Yes - Inuit</fullName>
            </value>
            <value>
                <fullName>Yes - Métis</fullName>
            </value>
            <value>
                <fullName>Yes - Indigenous ancestry</fullName>
            </value>
            <value>
                <fullName>Yes - Not listed</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Prefer not to answer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>