force-app/main/default/objects/Financial_Incentive__c/fields/Initiative__c.field-meta.xml
<CustomField>
    <fullName>Initiative__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Initiative</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>((1 OR 5) AND 2) OR (3 AND 4)</booleanFilter>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <value>BIA Commercial - Industrial Facade and Property Improvement, BIA Innovation Fund, BIA Leadership Fund, BIA Outside Mural and Street Art, BIA Streetscape Master Plan Funding, Business Incubation Grant, Event Sponsorship Grant, Sector Grant</value>
        </filterItems>
        <filterItems>
            <field>Campaign.RecordType.DeveloperName</field>
            <operation>notEqual</operation>
            <value>Investment_Activity</value>
        </filterItems>
        <filterItems>
            <field>Campaign.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Investment_Activity</value>
        </filterItems>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <value>IMIT, IMIT Read Only</value>
        </filterItems>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <value>Starter Company Grant</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Financial Incentives</relationshipLabel>
    <relationshipName>Financial_Incentives</relationshipName>
    <type>Lookup</type>
</CustomField>