force-app/main/default/objects/Financial_Incentive__c/fields/Initiative_Owner__c.field-meta.xml
<CustomField>
    <fullName>Initiative_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is a read only field populated based on Investment Activity record selected.</description>
    <inlineHelpText>This is a read only field populated based on Investment Activity record selected.</inlineHelpText>
    <label>Initiative Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Financial_Incentives1</relationshipName>
    <type>Lookup</type>
</CustomField>